<resources>
    <string name="app_name">Simak</string>
    <string name="desc">Desc</string>
    <string name="sistem_informasi_monitoring_air_kapal">Sistem Informasi Monitoring Air kapal</string>
    <string name="pt_pelindo_iii_bagendang">PT Pelindo III Bagendang</string>
    <string name="login">Login</string>
    <string name="username_nipp">Username/NIPP</string>
    <string name="password">Password</string>
    <string name="meter1">METER_1</string>
</resources>
